Fix overflow issues with superheader/brand header

--- a/src/styles/layouts/super-header.css
+++ b/src/styles/layouts/super-header.css
@@ -18,8 +18,8 @@
 .super-header__marquee {
   overflow: hidden;
   white-space: nowrap;
-  margin-left: -1.5rem;
-  margin-right: -1.5rem;
+  margin-left: -1rem;
+  margin-right: -1rem;
 }
 
 .super-header__marquee-text,
